k8s-manifests/models-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-app-models
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secret-app-models
  template:
    metadata:
      labels:
        app: secret-app-models
    spec:
      containers:
      - name: secret-app-models
        image: secret-app-models:latest
---
apiVersion: v1
kind: Service
metadata:
  name: secret-app-models-service
spec:
  selector:
    app: secret-app-models
  ports:
    - protocol: TCP
      port: 9042  # Порт для Cassandra
      targetPort: 9042
  type: ClusterIP
